# University

DSA/matrix_sll-cpp/: CMakeLists.txt  ExtendedTest.cpp  ExtendedTest.h  Matrix.cpp  Matrix.h  ShortTest.cpp  ShortTest.h  main.cpp
FP/a1-py/: p1.py  p2.py  p3.py
FP/a2-py/: Problem.py
FP/a4-py/: homework.py  homework2.py  homeworkEZ.py
FP/a5-py/: ASSIGNEMENT_5.py  assignement5.py
FP/a6-py/src/: functions.py  (+2 more)
FP/a7-py/: 1  SERVICES.py  assginement7.py  final.py  repository_1.py
FP/t1-py/: ui.py
OOP/a10-cpp/: BasketWindow.cpp  CMakeLists.txt  basket.csv  basket.html  baskettablemodel.h  command.h  command_manager.h  concrete_commands.h  domain.h  repository.cpp  service.h  trenchcoats.txt  user_repo.h  user_repo_csv.h
OOP/a4-5-cpp/: DynamicVector.h  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  tests.cpp  ui.cpp  ui.h
OOP/a6-7-cpp/: CMakeLists.txt  domain.cpp  domain.h  main.cpp  repository.cpp  repository.h  service.cpp  service.h  ui.cpp  user_repo.h  user_repo_csv.h  user_repo_html.h
OOP/a8-9-cpp/: BasketViewWindow.cpp  BasketViewWindow.h  BasketWindow.h  baskettablemodel.cpp  command.cpp  gui.cpp  gui.h  main.cpp  repository.h  service.cpp  ui.cpp  user_repo_html.h  usermodewindow.cpp  usermodewindow.h
PythonProject-ExcelReport/: README.md  config.json  main.py
PythonProject-ExcelReport/output/: cleaned_data.csv  summary.csv
PythonProject-ExcelReport/report/: analyzer.py  base.py  cleaner.py  logger.py  pipeline.py  visualizer.py
PythonProject-ExcelReport/tests/: test_analyzer.py  test_validation.py
(+39 files in other folders)
